@@ -4,23 +4,31 @@ import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.Getter;
 import lombok.SneakyThrows;
+import lombok.experimental.UtilityClass;
 import net.minecraft.block.AbstractBlock;
+import net.minecraft.block.Block;
 import net.minecraft.block.BlockRenderType;
+import net.minecraft.block.BlockState;
+import net.minecraft.item.BlockItemUseContext;
+import net.minecraft.state.DirectionProperty;
+import net.minecraft.state.StateContainer;
+import net.minecraft.state.properties.BlockStateProperties;
 import net.minecraft.tileentity.TileEntity;
 import net.minecraft.util.math.shapes.VoxelShape;
+import net.minecraft.util.Direction;
 import net.minecraftforge.common.ToolType;
 import software.bernie.techarium.tile.slaves.SlaveTile;
 import software.bernie.techarium.trait.Trait;
 
+@UtilityClass
 public class BlockTraits {
-    public static class MaterialTrait extends Trait {
-        public MaterialTrait() {
+
+    public abstract static class MaterialTrait extends Trait {
+        protected MaterialTrait() {
             this.addTweaker(AbstractBlock.Properties.class, this::tweakProperties);
         }
 
-        protected void tweakProperties(AbstractBlock.Properties properties) {
-
-        }
+        protected abstract void tweakProperties(AbstractBlock.Properties properties);
     }
 
     public static class MachineMaterialTrait extends MaterialTrait {
@@ -37,7 +45,7 @@ public class BlockTraits {
 
         @SneakyThrows
         public T createTileEntity() {
-            return tileClass.newInstance();
+            return tileClass.getDeclaredConstructor().newInstance();
         }
     }
 
@@ -72,5 +80,42 @@ public class BlockTraits {
         private final VoxelShape boundingBox;
         private final VoxelShape collisionBox;
     }
+    
+    public static class BlockRotationTrait extends Trait {
 
+    	protected final RotationType rotationType;
+
+    	public BlockRotationTrait(RotationType rotationType) {
+    		this.rotationType = rotationType;
+    	}
+
+        public BlockState getStateForPlacement(Block block, BlockItemUseContext context) {
+        	Direction dir;
+        	if (rotationType == RotationType.XZ)
+        		dir = context.getHorizontalDirection().getOpposite();
+        	else
+        	   	dir = context.getPlayer().isShiftKeyDown() ? context.getNearestLookingDirection().getOpposite() : context.getNearestLookingDirection();
+
+        	return block.defaultBlockState().setValue(rotationType.direction, dir);
+        }
+
+        public void createBlockStateDefinition(StateContainer.Builder<Block, BlockState> builder) {
+            builder.add(rotationType.direction);
+        }
+
+        public DirectionProperty getDirectionProperty() {
+        	return rotationType.direction;
+        }
+    }
+
+	public enum RotationType {
+		XZ(BlockStateProperties.HORIZONTAL_FACING),
+		XYZ(BlockStateProperties.FACING);
+
+		DirectionProperty direction;
+
+		private RotationType(DirectionProperty dir) {
+			direction = dir;
+		}
+	}
 }
